Last commit 14-8-24 before meeting graficabg women

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+/.idea/shelf/Uncommitted_changes_before_Reset_at_7_8_2024_23_31_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_7_8_2024_23_36_[Changes]/shelved.patch
