--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,29 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+.idea/
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+*.iws
+.idea/workspace.xml
+.idea/gradle.xml
+.idea/misc.xml
+
+# Gradle
+.gradle/
+build/
+
+# Log files
+*.log
+
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Linux
+*~
 
 ### Eclipse ###
 .apt_generated
