--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ bin/
 .DS_Store
 /.idea/shelf/Uncommitted_changes_before_Reset_at_7_8_2024_23_31_[Changes]/shelved.patch
 /.idea/shelf/Uncommitted_changes_before_Update_at_7_8_2024_23_36_[Changes]/shelved.patch
+.idea/dataSources.local.xml
+.idea/dataSources/1b82c8c9-a0ad-442c-a987-2ca2f9c30ac8.xml
+2024-09-23_314.pdf
