dinamic PDF creation and configs ready

--- a/src/main/java/utils/config/config.json
+++ b/src/main/java/utils/config/config.json
@@ -1,8 +1,1 @@
-{
-  "Dollar": "85.50",
-  "PlankLowering": "50",
-  "Cap": "20",
-  "Cup": "15",
-  "Ink": "35",
-  "Seamstress": "40"
-}
+{"Dollar":"1111","PlankLowering":"50","Cap":"20","Cup":"15","Ink":"565656","Seamstress":"40.98"}
